// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<TopicContainer> should match snapshot with error 1`] = `
<Container
  backgroundColor="#fff"
  inner={true}
  type="section"
>
  <p>
    test error message
  </p>
</Container>
`;

exports[`<TopicContainer> when there are no errors should match snapshot 1`] = `
<Container
  backgroundColor="#fff"
  inner={true}
  type="section"
>
  <TopicsList
    pending={true}
    topics={
      Array [
        TopicModel {},
        TopicModel {},
      ]
    }
  />
</Container>
`;
